# protocon-cpp

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: cmake.yml  xmake.yml
benches/: BenchSimple.cpp  xmake.lua
examples/: Heartbeat.cpp  Print.cpp  xmake.lua
include/Protocon/: ClientToken.h  Protocon.h  Request.h  Response.h  SignInResponse.h  SignUpResponse.h
src/: Decoder.h  Encoder.h  Protocon.cpp  RawCommand.h  RawRequest.h  RawResponse.h  RawSignInRequest.h  RawSignInResponse.h  RawSignUpRequest.h  RawSignUpResponse.h  Receiver.h  Sender.h  Socket.h  ThreadSafeQueue.h  ThreadSafeUnorderedMap.h  Util.h
tests/: TestSimple.cpp  xmake.lua
